--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "passport-jwt": "^4.0.0",
     "react-materialize": "^2.4.8",
     "react-router-dom": "^4.3.1",
-    "sequelize": "^4.41.1"
+    "sequelize": "^4.41.1",
+    "socket.io": "^2.1.1"
   }
 }
